--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,3 +87,23 @@
     @apply bg-background text-foreground;
   }
 }
+
+.custom-shape-divider-top-1717866196 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1717866196 svg {
+  position: relative;
+  display: block;
+  width: calc(280% + 1.3px);
+  height: 120px;
+}
+
+.custom-shape-divider-top-1717866196 .shape-fill {
+  fill: #FFFFFF;
+}
